fix: исправить edit button mobile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
   margin-top: 15px;
   background: url(../../../images/profile-edit-button.svg) no-repeat center;
   cursor: pointer;
+  flex-grow: 0;
 }
 
 @media screen and (max-width: 420px) {
